syntax = "proto3";

option go_package = "/proto";

import "google/protobuf/empty.proto";

service OrderService {
  rpc AddOrder(AddOrderRequest) returns (AddOrderResponse);
  rpc CallbackNotification(CallbackNotificationRequest) returns (google.protobuf.Empty);
  rpc GetOrderList(GetOrderListRequest) returns (GetOrderListResponse);
}

message AddOrderRequest {
  int32 userId = 1;
  string voucherId = 2;
  repeated int32 cartIds = 3;
  string courierName = 4;
  string courierServiceName = 5;
  string originCityId = 6;
  string destinationCityId = 7;
  int32 otherFee = 8;
  string metadata = 9;
}

message AddOrderResponse {
  string message = 1;
  string invoiceUrl = 2;
  string expiredDate = 3;
  int32 totalPrice = 4;
}

message CallbackNotificationRequest {
  string orderIdExt = 1;
  string status = 2;
  int32 paidAmount = 3;
}

message GetOrderListRequest {
  int32 userId = 1;
}

message GetOrderListResponse {
  repeated Order orders = 1;
}

message Order {
  int32 orderId = 1;
  repeated Shoe shoes = 2;
  int32 fee = 3;
  double discount = 4;
  int32 totalPrice = 5;
  string voucherId = 6;
  string status = 7;
}

message Shoe {
  string name = 1;
  int32 price = 2;
  int32 qty = 3;
  int32 size = 4;
}
